objects/Contract_Invoice_Header__c.object
<CustomObject>
    <description>Invoice Header on Contract Object</description>
    <fields>
        <fullName>Account_Number_From_Contract__c</fullName>
        <description>Account Number from Account on Contract Header</description>
        <formula>Order__r.Account.Account_Number__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Dependent field on Escalation Stage</description>
        <label>Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_10_minutes__c</fullName>
        <description>Used in Alert Corp Systems workflow.</description>
        <label>Alert 10 minutes</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alternative_Responsible_Code_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Responsible Code</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutomationBypassDateTime__c</fullName>
        <label>AutomationBypassDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Awaiting_PO_Notification_Sent_On__c</fullName>
        <label>Awaiting PO Notification Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BU_From_Contract_Header__c</fullName>
        <description>BU from Account that is on the Contract Header</description>
        <formula>Order__r.BU__c</formula>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <formula>Order__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Registration_Number__c</fullName>
        <formula>Billing_Contact__r.Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Display__c</fullName>
        <formula>IF((Order__r.Opportunity.MS_Opportunity__c = true),&apos;Detailed Pricing&apos;,TEXT(Order__r.Contract.Client_Display__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Reltionship to Help pull fields over from Contract Line to Invoice Header</description>
        <label>Order Line</label>
        <referenceTo>Contract_Line__c</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order (Legacy)</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Booking</label>
        <referenceTo>Course_Booking__c</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Note?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Reason_Code__c</fullName>
        <description>List of Reason Codes from SunSystems</description>
        <label>Credit Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>R01 - TAX</fullName>
                </value>
                <value>
                    <fullName>R02 - Aged Debt Recovery</fullName>
                </value>
                <value>
                    <fullName>R03 - Contract Change</fullName>
                </value>
                <value>
                    <fullName>R04 - Client Request</fullName>
                </value>
                <value>
                    <fullName>R05 - SHL Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debt_Status__c</fullName>
        <formula>IF( Unpaid_Amount__c &lt;= 0 || ISNULL(Payment_Due_Date__c) ,IMAGE(&quot;/resource/1753334831000/Green_Status_Icon?&quot; , &quot;Green&quot; , 18, 19), IF(TODAY() -  Payment_Due_Date__c &lt; 45,IMAGE(&quot;/resource/1753334831000/Green_Status_Icon?&quot; , &quot;Green&quot; , 18, 19),IF(TODAY() - Payment_Due_Date__c &gt; 60,IMAGE(&quot;/resource/1753334831000/Red_Status_Icon?&quot; , &quot;Red&quot; , 18, 19),IMAGE(&quot;/resource/1753334831000/Amber_Status_Icon?&quot; , &quot;Amber&quot; , 18, 19))))</formula>
        <label>Debt Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Dependent field on the Esclation Stage</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Code__c</fullName>
        <formula>Alternative_Responsible_Code_1__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_End_Date__c</fullName>
        <formula>Escalation_Start_Date__c  - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation End Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Prior_Date__c</fullName>
        <description>USed in backend</description>
        <label>Escalation Prior Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Stage_Prior_Value__c</fullName>
        <description>Used at backend</description>
        <label>Escalation Stage Prior Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Stage__c</fullName>
        <description>New field created use to check where an invoice header is pending when the stage is awaiting PO</description>
        <label>Escalation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 0 - Not Due</fullName>
                </value>
                <value>
                    <fullName>Level 1 - Release Invoice</fullName>
                </value>
                <value>
                    <fullName>Level 2 - No Response</fullName>
                </value>
                <value>
                    <fullName>Level 3 - OTC Team Lead</fullName>
                </value>
                <value>
                    <fullName>Level 4 - Head of OTC</fullName>
                </value>
                <value>
                    <fullName>Level 5 - Group FC</fullName>
                </value>
                <value>
                    <fullName>Level 6 - Business Senior</fullName>
                </value>
                <value>
                    <fullName>Level 7 - Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Start_Date__c</fullName>
        <label>Escalation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Status_Progress__c</fullName>
        <label>Escalation Status Progress</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GSSC_Email_Combined__c</fullName>
        <formula>CASE( Order__r.BU__c 
,&quot;China - CN1&quot;,&quot;HK.SOE@shl.com&quot;                    
,&quot;EU Region - E50&quot;,&quot;UK1SOE@shl.com&quot;                                                              
,&quot;Italy - IT1&quot;,&quot;ItalySOE@shl.com&quot;                                                                
,&quot;Middle East - ME1&quot;,&quot;UK1SOE@shl.com&quot;                                                            
,&quot;SHL Previsor - P10&quot;,&quot;UK1SOE@shl.com&quot;                                                           
,&quot;UK - UK1&quot;,&quot;UK1SOE@shl.com&quot;      
,&quot;US - US5&quot;,&quot;US5.SOE@shl.com&quot;                                                                   
,MID(Order__r.BU__c, (LEN(Order__r.BU__c)-2), 2)  &amp; &quot;.SOE@shl.com&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSSC Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSC_Instructions__c</fullName>
        <inlineHelpText>Enter instructions to the SOP team who will be raising the invoice. These will not print on the Sales Invoice sent to the customer.</inlineHelpText>
        <label>Special Invoicing Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GST_Identification_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GST Identification Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3 OR 4) AND 5 AND 6</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria</errorMessage>
            <filterItems>
                <field>$Source.Invoice_Account__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>India_GST__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Invoice_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>India_GST__c.Name</field>
                <operation>equals</operation>
                <value>Outside of India</value>
            </filterItems>
            <filterItems>
                <field>India_GST__c.Name</field>
                <operation>equals</operation>
                <value>URP</value>
            </filterItems>
            <filterItems>
                <field>India_GST__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>India_GST__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Tax</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>India_GST__c</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GST_Transfer_Status__c</fullName>
        <formula>TEXT(GST_Identification_Number__r.Transfer_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GST Transfer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Headers (Invoice Account)</relationshipLabel>
        <relationshipName>Invoice_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Comments__c</fullName>
        <label>Printable Note</label>
        <length>550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact_Registration_Number__c</fullName>
        <formula>Invoice_Contact__r.Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Contact Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Either Invoice and it&apos;s Invoice Contact are not from the same Account OR Invoice Contact is Inactive.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Invoice_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoice Headers (Invoice Contact)</relationshipLabel>
        <relationshipName>Invoice_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_D_Number__c</fullName>
        <formula>Invoice_Account__r.Account_Number__c</formula>
        <label>Invoice D Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <inlineHelpText>refers to the date invoice is raised to the client in SUN Systems</inlineHelpText>
        <label>Sun Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <description>This field tells the due date of invoice, based on the invoice date &amp; payement terms.</description>
        <formula>IF(
    ISBLANK(Invoice_Date__c),
    IF(
        ISBLANK(Parent_Invoice_header__r.Invoice_Date__c),
        NULL,
        IF(
            ISBLANK(Non_Default_Payment_Term_Formula__c),
            NULL,
            Parent_Invoice_header__r.Invoice_Date__c + 
            VALUE(
                LEFT(
                    Non_Default_Payment_Term_Formula__c,
                    FIND(&quot;D&quot;, Non_Default_Payment_Term_Formula__c) - 1
                )
            )
        )
    ),
    IF(
        ISBLANK(Non_Default_Payment_Term_Formula__c),
        NULL,
        Invoice_Date__c + 
        VALUE(
            LEFT(
                Non_Default_Payment_Term_Formula__c,
                FIND(&quot;D&quot;, Non_Default_Payment_Term_Formula__c) - 1
            )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sun Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Gross_Amount__c</fullName>
        <description>Keeps the gross invoice amount from SUN Infor10 System</description>
        <label>Sun Invoice Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Header_Comments__c</fullName>
        <description>Comments that will appear on the Invoice</description>
        <inlineHelpText>This field should be used for large amounts of text to be added to invoices and should be created manually in Sun.</inlineHelpText>
        <label>Extended Comments</label>
        <length>9999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Name__c</fullName>
        <description>Name field for Invoice Header</description>
        <inlineHelpText>Enter a short description to remember this Invoice by e.g. May PayGo for 2011</inlineHelpText>
        <label>Invoice Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Net_Amount__c</fullName>
        <description>Keeps the net invoice amount from SUN Infor10 System</description>
        <label>Sun Invoice Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Request_Reference__c</fullName>
        <label>Invoice Request Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Invoice__c.Status__c</field>
                <operation>equals</operation>
                <value>Submitted for Processing, Processed</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Invoice__c</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <description>Invoice status. This includes all invoice lines below.</description>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Draft - awaiting milestones</fullName>
                </value>
                <value>
                    <fullName>On Hold for Payment Milestone</fullName>
                </value>
                <value>
                    <fullName>Cross Border</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Awaiting PO</fullName>
                </value>
                <value>
                    <fullName>Awaiting GST/VAT Info</fullName>
                </value>
                <value>
                    <fullName>Awaiting Chop</fullName>
                </value>
                <value>
                    <fullName>No Usage</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Ready to Invoice</fullName>
                </value>
                <value>
                    <fullName>Ready for SOE Review</fullName>
                </value>
                <value>
                    <fullName>Ready for Sun Transfer</fullName>
                </value>
                <value>
                    <fullName>Transferring to Sun</fullName>
                </value>
                <value>
                    <fullName>Sun Order Complete</fullName>
                </value>
                <value>
                    <fullName>Sun Invoice Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <label>Invoice Total</label>
        <summarizedField>Contract_Invoice_Line__c.Discounted_Invoice_Line_Total__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Invoice_Line__c.IM_Lookup_Code_For_Filter__c</field>
            <operation>notEqual</operation>
            <value>Freight</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Contract_Invoice_Line__c.IM_Lookup_Code_For_Filter__c</field>
            <operation>notEqual</operation>
            <value>Expenses</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Invoice_Line__c.Invoice_Header_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Transaction_Amount__c</fullName>
        <label>Sun Invoice Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_total_value__c</fullName>
        <formula>Invoice_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice total value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsAutomationBypassed__c</fullName>
        <formula>AutomationBypassDateTime__c &gt; (NOW() -0.00069444444)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAutomationBypassed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Auto_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auto Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Number</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Transfer_Reason__c</fullName>
        <inlineHelpText>Please mention the reason for manual transfer of this invoice.</inlineHelpText>
        <label>Manual Transfer Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Invoice_Line__c</fullName>
        <description>This has been created to calculate the number of invoice line created against invoice header. And to be used to validate the Invoice Header while moving to different status from Draft.</description>
        <label>No. of Invoice Line</label>
        <summaryForeignKey>Contract_Invoice_Line__c.Invoice_Header_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Default_Payment_Term_Formula__c</fullName>
        <formula>IF( Order__r.RecordTypeId=&apos;0124G000000Bj14&apos;,
IF((Order__r.Opportunity.MS_Opportunity__c = true),&apos;30D&apos;,&apos;&apos;),
IF( ISBLANK(TEXT(Order__r.Contract.Payment_terms__c)) ,
&apos;60D&apos;,
LEFT(TEXT(Order__r.Contract.Payment_terms__c),Find(&quot; &quot;, TEXT(Order__r.Contract.Payment_terms__c))-1)&amp; &apos;D&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Default Payment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Default_Payment_Term__c</fullName>
        <label>Non Default Payment Term(Legacy)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30D</fullName>
                </value>
                <value>
                    <fullName>60D</fullName>
                </value>
                <value>
                    <fullName>90D</fullName>
                </value>
                <value>
                    <fullName>30NM</fullName>
                </value>
                <value>
                    <fullName>45D</fullName>
                </value>
                <value>
                    <fullName>60NM</fullName>
                </value>
                <value>
                    <fullName>60NM + 5 DAYS</fullName>
                </value>
                <value>
                    <fullName>90NM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OAT_Email2__c</fullName>
        <label>OAT Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_type__c</fullName>
        <formula>TEXT( Order__r.Opportunity.OpportunityType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Method__c</fullName>
        <label>Order Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOE</fullName>
                </value>
                <value>
                    <fullName>T&amp;E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Total_diff_from_invoice_total__c</fullName>
        <formula>IF( ROUND(Invoice_Total__c,2)  &lt;&gt;   ROUND(Order__r.TotalAmount,2) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total diff from invoice total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PO_number__c</fullName>
        <label>PO number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Invoice_header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Invoice header mapped as Invoice Header from which credit/reissue is created.</description>
        <label>Parent Invoice header</label>
        <referenceTo>Contract_Invoice_Header__c</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <description>Keeps the Invoice Payment Due Date from SUN Infor10 System</description>
        <inlineHelpText>Keeps the Invoice Payment Due Date from SUN Infor10 System</inlineHelpText>
        <label>Sun Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <formula>IF(OR(ISNULL(Invoice_Gross_Amount__c), Invoice_Gross_Amount__c =0), &apos;&apos;,IF(Unpaid_Amount__c &lt;= 0, &apos;Fully Paid&apos;, IF( Unpaid_Amount__c = Invoice_Gross_Amount__c ,&apos;Unpaid&apos;,&apos;Partially Paid&apos;)))</formula>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Date__c</fullName>
        <description>Shows the date that invoice will be raised on</description>
        <inlineHelpText>Enter date that invoice needs to be created on.</inlineHelpText>
        <label>Date invoice to be processed by SOP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Billing_Frequency__c</fullName>
        <formula>TEXT( Order__r.Contract.Product_Billing_Frequency__c )</formula>
        <label>Product Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lookup</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDC2SUN_Log__c</fullName>
        <description>This field contains the success and failure logs of the Header during transfer process to Sun Systems</description>
        <inlineHelpText>Header transfer logs</inlineHelpText>
        <label>SFDC2SUN: Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC2SUN_SFDC_Version__c</fullName>
        <description>This field indicate the required version of the Invoice Header in Sun Systems.</description>
        <label>SFDC2SUN: SFDC Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC2SUN_Transfer_Status__c</fullName>
        <description>It indicates the Invoice Header status whether it has been transferred to Sun or not.</description>
        <inlineHelpText>The status of the last transfer attempt from SFDC to Sun.</inlineHelpText>
        <label>SFDC2SUN: Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Transferred</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Ready for Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC2SUN_Transferred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates the salesforce.com user who transferred the Invoice header in Sun Systems</description>
        <inlineHelpText>The user who last transferred the record from SFDC to Sun.</inlineHelpText>
        <label>SFDC2SUN: Transferred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InvoiceHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC2SUN_Transferred_On__c</fullName>
        <description>This field indicates the date when the Invoice header was transferred in Sun Systems</description>
        <inlineHelpText>The date of the last transfer attempt from SFDC to Sun.</inlineHelpText>
        <label>SFDC2SUN: Transferred On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SSC_Email__c</fullName>
        <description>Automatically updated with a workflow field update.</description>
        <label>SSC Email</label>
        <type>Email</type>
    </fields>
</CustomObject>